# ocaml-nix-toy-project

./: .gitignore  README.md  dune  dune-project  flake.nix  ocaml-nix.opam  ocaml-nix.opam.locked  ocaml-nix.opam.template  package.json
nix/: default.nix  docker.nix  overlays.nix
proj1/lib/: config.ml  config.mli  dune  foobar.atd
proj1/lib/protobuf-foo/: dialo_nix.proto  dune
proj1/lib/protobuf-foo/google_types_deriving/: dune
proj1/lib/stork-foo/: dune  stork_user_fns.ml
proj2/lib/: config.ml  config.mli  dune
rescript/: bsconfig.json  package.json
rescript/src/: foores.atd  main.mjs  main.res
shared/: bsconfig.json  dune  package.json
shared/src/: config.ml  config.mli
