(library
 (name google_types_deriving)
 (libraries ocaml-protoc-plugin)
 (synopsis "Google well known types - with deriving")
 (preprocess
  (pps ppx_expect ppx_deriving.show ppx_yojson_conv)))

(rule
 (targets google_include)
 (action
  (with-stdout-to
   %{targets}
   (system "pkg-config protobuf --variable=includedir"))))

(rule
 (targets
  any.ml
  api.ml
  descriptor.ml
  duration.ml
  empty.ml
  field_mask.ml
  source_context.ml
  struct.ml
  timestamp.ml
  type.ml
  wrappers.ml)
 (action
  (run
   protoc
   -I
   %{read-lines:google_include}
   "--ocaml_out=annot=[@@deriving yojson_of, show { with_path = false }]:."
   %{read-lines:google_include}/google/protobuf/any.proto
   %{read-lines:google_include}/google/protobuf/api.proto
   %{read-lines:google_include}/google/protobuf/descriptor.proto
   %{read-lines:google_include}/google/protobuf/duration.proto
   %{read-lines:google_include}/google/protobuf/empty.proto
   %{read-lines:google_include}/google/protobuf/field_mask.proto
   %{read-lines:google_include}/google/protobuf/source_context.proto
   %{read-lines:google_include}/google/protobuf/struct.proto
   %{read-lines:google_include}/google/protobuf/timestamp.proto
   %{read-lines:google_include}/google/protobuf/type.proto
   %{read-lines:google_include}/google/protobuf/wrappers.proto)))
